Remove unncesary exceptions